--- a/sections/product-main.liquid
+++ b/sections/product-main.liquid
@@ -30,11 +30,11 @@
       <a class="visually-hidden-focusable" href="#product-inner-{{ product.id }}">
         {{ 'general.accessibility.skip_product_content' | t }}
       </a>      
-      <div class="row justify-content-center">
-        <div class="col-desktop-10 mb-5 mb-desktop-0">
+      <div class="row">
+        <div class="col-desktop-9 mb-5 mb-desktop-0">
           {% render 'product-block-media-gallery' %}
         </div>
-        <div class="col-desktop-8">
+        <div class="col-desktop-9">
           <div id="product-inner-{{ product.id }}">
             <product-form>
               {% form 'product', product, data-productid: product.id, data-variants: variants_json %}
